replaced the resume link and used my s3bucket instead, Fixed the path to the logo svg, changed the body color to fixed a white space created on mobile

--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-	background-color: #f0f0f0;
+	background-color: $dark;
 	font-family: 'Roboto', sans-serif;
 	text-align: center;
 	box-sizing: border-box;
